Add send money transaction logic with validations